# 3-python-package-exercise-team-dtttt

./: Pipfile  README.md  example.py  setup.cfg
calc/: __init__.py  calc_instructions.txt  calculator.py
tests/: test_Basics.py
