[metadata]
name = CalculatorPackSEDTTT 
version = 1.0.3
description = A comprehensive calculator package with various math operations.
long_description = file: README.md
long_description_content_type = text/markdown
#author = Your Name
#author_email = your.email@example.com

[options]
packages = find:
python_requires = >=3.6